kubernetes/clusters/my-cluster/apps/weave/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-ingress
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - weave.syd.broc.ee
    secretName: weave-tls
  rules:
  - host: weave.syd.broc.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weave-gitops
            port:
              number: 9001
